kubernetes/projects/core/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - grafana.lan.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana-service
      port: 3000
